WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
226639
Compile errors by unexpected values in ANGLE functions
https://bugs.webkit.org/show_bug.cgi?id=226639
Summary
Compile errors by unexpected values in ANGLE functions
Eleni Maria Stea
Reported
2021-06-04 04:08:13 PDT
ANGLE functions GetInteger64vRobustANGLE and GetInteger64i_vRobustANGLE expect a value of GLint64* aka long int * but we try to fit a pointer to a long long int. We need to fix the compile errors.
Attachments
Patch
(2.03 KB, patch)
2021-06-04 04:16 PDT
,
Eleni Maria Stea
no flags
Details
Formatted Diff
Diff
Patch
(1.47 KB, patch)
2021-06-07 04:25 PDT
,
Eleni Maria Stea
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Eleni Maria Stea
Comment 1
2021-06-04 04:16:40 PDT
Created
attachment 430567
[details]
Patch
Fujii Hironori
Comment 2
2021-06-06 18:50:15 PDT
ANGLE seems to use int64_t and uint64_t. What about changing GCGLint64 and GCGLuint64? typedef int64_t GCGLint64; typedef uint64_t GCGLuint64;
Kimmo Kinnunen
Comment 3
2021-06-07 02:21:47 PDT
(In reply to Fujii Hironori from
comment #2
)
> ANGLE seems to use int64_t and uint64_t. > What about changing GCGLint64 and GCGLuint64? > > typedef int64_t GCGLint64; > typedef uint64_t GCGLuint64;
This sounds like a good solution
Eleni Maria Stea
Comment 4
2021-06-07 03:56:57 PDT
sure, I am going to update it
Eleni Maria Stea
Comment 5
2021-06-07 04:25:28 PDT
Created
attachment 430735
[details]
Patch
Kenneth Russell
Comment 6
2021-06-07 08:53:27 PDT
The failures on mac-AS-debug-wk2 look unrelated: Application Specific Information: CRASHING TEST: /canvas/webgl/origin-clean-conformance.html Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.JavaScriptCore 0x0000000103235374 WTFCrash + 20 1 com.apple.WebCore 0x00000001200c0e70 WTFCrashWithInfo(int, char const*, char const*, int) + 32 2 com.apple.WebCore 0x0000000121559bd4 WebCore::SharedRoutingArbitrator::endRoutingArbitrationForToken(WebCore::SharedRoutingArbitrator::Token const&) + 124 3 com.apple.WebKit 0x000000010ce7a068 WebKit::AudioSessionRoutingArbitratorProxy::endRoutingArbitration() + 68 4 com.apple.WebKit 0x000000010b7c64b4 void IPC::callMemberFunctionImpl<WebKit::AudioSessionRoutingArbitratorProxy, void (WebKit::AudioSessionRoutingArbitratorProxy::*)(), std::__1::tuple<> >(WebKit::AudioSessionRoutingArbitratorProxy*, void (WebKit::AudioSessionRoutingArbitratorProxy::*)(), std::__1::tuple<>&&, std::__1::integer_sequence<unsigned long>) + 124 5 com.apple.WebKit 0x000000010b7c5fe0 void IPC::callMemberFunction<WebKit::AudioSessionRoutingArbitratorProxy, void (WebKit::AudioSessionRoutingArbitratorProxy::*)(), std::__1::tuple<>, std::__1::integer_sequence<unsigned long> >(std::__1::tuple<>&&, WebKit::AudioSessionRoutingArbitratorProxy*, void (WebKit::AudioSessionRoutingArbitratorProxy::*)()) + 124 6 com.apple.WebKit 0x000000010b7c2a14 void IPC::handleMessage<Messages::AudioSessionRoutingArbitratorProxy::EndRoutingArbitration, WebKit::AudioSessionRoutingArbitratorProxy, void (WebKit::AudioSessionRoutingArbitratorProxy::*)()>(IPC::Decoder&, WebKit::AudioSessionRoutingArbitratorProxy*, void (WebKit::AudioSessionRoutingArbitratorProxy::*)()) + 160 7 com.apple.WebKit 0x000000010b7c2778 WebKit::AudioSessionRoutingArbitratorProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&) + 200 8 com.apple.WebKit 0x000000010bd5f6cc IPC::MessageReceiverMap::dispatchMessage(IPC::Connection&, IPC::Decoder&) + 384 9 com.apple.WebKit 0x000000010cd96ac8 WebKit::AuxiliaryProcessProxy::dispatchMessage(IPC::Connection&, IPC::Decoder&) + 44 10 com.apple.WebKit 0x000000010d09600c WebKit::WebProcessProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&) + 48
Kenneth Russell
Comment 7
2021-06-07 08:54:29 PDT
Comment on
attachment 430735
[details]
Patch Looks good to me given that this change compiles. r+
EWS
Comment 8
2021-06-07 13:27:57 PDT
Committed
r278571
(
238569@main
): <
https://commits.webkit.org/238569@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 430735
[details]
.
Radar WebKit Bug Importer
Comment 9
2021-06-07 13:28:19 PDT
<
rdar://problem/78960589
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug