Compile error by trying to fit a GCGLint64* to a GLint64* https://bugs.webkit.org/show_bug.cgi?id=226639

Patch by Eleni Maria Stea <estea@igalia.com> on 2021-06-07
Reviewed by Kenneth Russell.

ANGLE functions GetInteger64vRobustANGLE and
GetInteger64i_vRobustANGLE expect a value of GLint64* aka
long int * but we try to fit a pointer to a long long int.
Fixed compile errors.

* platform/graphics/GraphicsTypesGL.h:

Canonical link: https://commits.webkit.org/238569@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278571 268f45cc-cd09-0410-ab3c-d52691b4dbfc